# BMSTU-sem4-CG

./: .gitignore  README.md
lab_01/: circle.h  lab_01.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  point.cpp  point.h  recources.qrc  resources.qrc  vector.cpp  vector.h
lab_01/backend/inc/: circle.h
lab_01/backend/src/: circle.cpp
lab_01/frontend/inc/: drawer.h  graphicsview.h
lab_01/frontend/src/: drawer.cpp  graphicsview.cpp
lab_02/: .gitignore  figure.cpp  figure.h  figure_item.cpp  figure_item.h  lab_02.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  point.cpp  point.h
lab_02/data/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
lab_02/img_to_poly/: contour_to_edges.py  img_to_contours.py  img_to_symmatrix.py  requirements.txt
lab_02/undoredo/: stask.cpp  stask.h  staskpool.cpp  staskpool.h
lab_03/lab_03/: algoTypes.h  circle.cpp  circle.h  ellipse.cpp  ellipse.h  lab_03.pro  line.cpp  line.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pixel.cpp  pixel.h  spectrum.cpp  spectrum.h  stask.cpp  stask.h  staskpool.cpp  staskpool.h
lab_05/: lab_05.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
lab_06/: mainwindow.cpp  mainwindow.h  mainwindow.ui
lab_07/: mainwindow.cpp  mainwindow.h  mainwindow.ui
lab_08/: drawlabel.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
lab_10/: Alg.cpp  Alg.h  CMakeLists.txt  Errors.cpp  Errors.h  funcs.cpp  funcs.h  lab_10.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
